--- a/Final_test/Final_test/Final_test.vcxproj
+++ b/Final_test/Final_test/Final_test.vcxproj
@@ -140,6 +140,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Final_test.cpp" />
+    <ClCompile Include="Good.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Good.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
