--- a/Final_test/Final_test/Final_test.vcxproj.filters
+++ b/Final_test/Final_test/Final_test.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="Final_test.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Good.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Good.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
