--- a/Final_test/Final_test/Final_test.vcxproj.filters
+++ b/Final_test/Final_test/Final_test.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Final_test.cpp">
+    <ClCompile Include="Final_Test.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
     <ClCompile Include="Good.cpp">
