--- a/Task_map/Task_map/Task_map.vcxproj.filters
+++ b/Task_map/Task_map/Task_map.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="Task_map.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Good.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Good.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
