--- a/Task_map/Task_map/Task_map.vcxproj
+++ b/Task_map/Task_map/Task_map.vcxproj
@@ -139,7 +139,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Good.cpp" />
     <ClCompile Include="Task_map.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Good.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
